Added soft delete and recycled flag
